# Personal_AI_Infrastructure

./: .cursorrules  .env.example  .gitignore  .gitlab-ci.yml  .hook-test-2.md  .hook-test-3.md  01_SYSTEM_CONTEXT.md  02_VENTAS_B2B_PLAYBOOK.md  03_LINKEDIN_STRATEGY.md  04_NEGOCIACION_TACTICAS.md  05_SCRIPTS_TEMPLATES.md  06_AI_STRATEGY_FRAMEWORK.md  07_LINKEDIN_PROFILE_OPTIMIZATION.md  CHANGELOG.md  CLAUDE.md  CONFIG_SNAPSHOT.md  GITHUB_ISSUE_DRAFT.md  GUIA_RAPIDA_PAI.md  HYBRID-WORKFLOW.md  PACKS.md  PAI-v4.1.0-plan.md  PAI-v4.1.0-summary.md  PLATFORM.md  PROOFS.md  README 2.md  README-AITO-OVERLAY.md  README-UPDATE-WORKFLOW.md  README.md  REPOSITORY_SUMMARY.md  RESUMEN_PERSONALIZACION_PAI.md  ROADMAP_2026_MARC_BAU.md  SESSION-CONTEXT.md  SKILL_LINKEDIN_QUICK_REFERENCE.md  SKILL_LINKEDIN_VIDEO_TO_POSTS.md  kai-ollama-uninstall.md  package-lock.json  package.json  pyproject.toml  settings.json  tmpclaude-326b-cwd  (+2 more)
.claude/: .env.example  .mcp.json  Custom_Features.md  agent-sessions.json  settings.json  setup.sh  statusline-command.sh
.claude-plugin/: marketplace.json
.devcontainer/: Dockerfile  devcontainer.json
.prd/: PRD-20260219-windows-11-support.md
.sisyphus/: boulder.json
Bundles/: README.md
OpenCode/: PACK_CONVERSION_GUIDE.md
Packs/: README.md  (+1 more)
rust/pai-core/: .gitignore  Cargo.toml  README.md  traits.yaml
rust/pai-core/benches/: pai_bench.rs
rust/pai-core/src/: agents.rs  algorithm.rs  classifier.rs  compliance.rs  config.rs  debug_prosody.rs  enrichment.rs  fabric.rs  hardening.rs  hooks.rs  identity.rs  learning.rs  lib.rs  manifest.rs  memory.rs  observability.rs  oracle.rs  orchestration.rs  privacy.rs  prompting.rs  prosody.rs  recovery.rs  safety.rs  skills.rs  swarm.rs  telos.rs  upgrades.rs  visuals.rs
rust/pai-core/tests/: integration_tests.rs
(+3052 files in other folders)
